fixed the overflowing text on list items

--- a/client/src/assets/css/checkbox.css
+++ b/client/src/assets/css/checkbox.css
@@ -67,3 +67,24 @@
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
   }
+  @media all and ( min-width: 321px ) and (max-width: 375px ){
+    .checkmark{
+      height: 20px;
+      width: 20px;
+  }
+  .label-container .checkmark:after{
+      left: 6px;
+      top: 3px;
+  }
+}
+
+@media all and (max-width: 320px ){
+  .checkmark{
+    height: 20px;
+    width: 20px;
+  }
+  .label-container .checkmark:after{
+    left: 6px;
+    top: 3px;
+  }
+}
